--- a/uso-do-var.html
+++ b/uso-do-var.html
@@ -1,3 +1,4 @@
+<!-- Digite ! e aperte TAB para gerar código na estrutura HTML (atalho do VSCode) -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -14,15 +15,15 @@
 
     //o uso do var NÃO é delimitado por bloco
     if(1 == 1) {
-      var teste2 = 30;
+      var varBloco = 'Variável declarada no bloco';
     }
-    console.log(teste2);
+    console.log(varBloco);
 
     //o uso do var é delimitado por função
     function funcao() {
-      var teste = 25;
+      var varFuncao = 'Variável declarada na função';
     }
-    console.log(teste); //vai dar erro, pois a variável foi declarada dentro de uma função
+    console.log(varFuncao); //vai dar erro, pois a variável foi declarada dentro de uma função
     
 
 
